using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class AnimatorParameters
{
    public const string Forward = "Forward";
    public const string Turn = "Turn";
    public const string Dash = "Dash";
    public const string ShootBool = "ShootBool";
    public const string SwordAttack = "SwordAttack";
    public const string UltimateBool = "UltimateBool";
    public const string Moving = "moving";
}